--- a/cripto/t3/index.html
+++ b/cripto/t3/index.html
@@ -1,3 +1,3 @@
 
-<p>Este sitio contiene un mensaje secreto</p>
+<p>Mensaje secreto</p>
 <div class='kuznyechik' id='54e1b572408a705054e1b572408a7050'></div>
